# clang.mbt

./: .gitignore  CMakeLists.txt
.github/workflows/: check.yaml
src/: cursor.mbt  eq.mbt  internal.mbt  pkg.generated.mbti  targetinfo.mbt  token.mbt  top_wtest.mbt  translation_unit.mbt  type.mbt  types.mbt
src/cursor_kind/: enums.mbt  pkg.generated.mbti
src/type_kind/: enums.mbt  pkg.generated.mbti
